2004-07-27  Roland McGrath  <roland@frob.com>

	* misc.h (OPENONLY_STATE_MODES): Remove O_NONBLOCK.

2004-02-10  Roland McGrath  <roland@frob.com>

	* runtime-argp.c (netfs_runtime_argp): Include <argp.h>.

2002-06-13  Roland McGrath  <roland@frob.com>

	* dir-readdir.c (netfs_S_dir_readdir): Revert last change.

2002-06-08  Roland McGrath  <roland@frob.com>

	* io-identity.c (netfs_S_io_identity): Use ino_t for FILENO.

	* dir-readdir.c (netfs_S_dir_readdir): Use vm_size_t for AMT.

2002-06-07  Roland McGrath  <roland@frob.com>

	* netfs.h (struct node): Use io_statbuf_t instead of struct stat.
	(netfs_attempt_statfs): Use fsys_statfsbuf_t instead of struct statfs.
	(struct peropen): Use loff_t instead of off_t.
	(netfs_attempt_read, netfs_attempt_write): Likewise.
	(netfs_attempt_set_size, netfs_file_get_storage_info): Likewise.

2002-05-23  Marcus Brinkmann  <marcus@gnu.org>

	* io-read.c (netfs_S_io_read): If desired amount is larger than
	symlink length, truncate amount.  Actually use WHOLE_LINK to store
	link target temporarily.  When reading the link target directly,
	update *DATALEN.

2002-05-13  Roland McGrath  <roland@frob.com>

	* netfs.h (struct node): New member `nn_translated'.
	* dir-lookup.c (netfs_S_dir_lookup): Examine that in place of
	nn_stat.st_mode to decide if there is a passive translator.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* io-version.c: New file.
	* Makefile (IOSRCS): Add io-version.c.
	* fsstubs.c (netfs_S_io_server_version): Function removed.
	* netfs.h (netfs_server_name, netfs_server_version): New external
	variables to be defined by the user.

2002-05-11  Roland McGrath  <roland@frob.com>

	* trans-callback.c (_netfs_translator_callback1_fn): Add an assert
	that netfs_get_translator not fail with EOPNOTSUPP.

2002-05-07  Roland McGrath  <roland@frob.com>

	* fsys-getroot.c (netfs_S_fsys_getroot): Fix arg type in decl.
	* append-std-options.c (netfs_append_std_options): Likewise.
